--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,24 @@
 spring:
   application:
     name: PManager
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+  h2:
+    console:
+      enabled: true
+  datasource:
+    url: jdbc:h2:mem:test
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+  jackson:
+    default-property-inclusion: non_null
+server:
+  port: 8080
+  servlet:
+    context-path: /
+
+
